simple style changes

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
-    <link rel="stylesheet" href="fx.css"/>
-    <link rel="stylesheet" href="title.css"/>
+    <link rel="stylesheet" href="fx.css" />
+    <link rel="stylesheet" href="title.css" />
     <style>
       html,
       body {
@@ -13,7 +13,7 @@
         flex-direction: row;
         justify-content: center;
         align-items: center;
-        background: #B59410;
+        background: #b59410;
       }
     </style>
   </head>
@@ -55,27 +55,27 @@
         <div id="ㅤ" class="letter">ㅤ</div>
         <div class="shadow">ㅤ</div>
       </div>
-        <div class="wrapper">
+      <div class="wrapper">
         <div id="C" class="letter">C</div>
         <div class="shadow">C</div>
       </div>
-        <div class="wrapper">
+      <div class="wrapper">
         <div id="I" class="letter">I</div>
         <div class="shadow">I</div>
       </div>
-        <div class="wrapper">
+      <div class="wrapper">
         <div id="P" class="letter">P</div>
         <div class="shadow">P</div>
       </div>
-        <div class="wrapper">
+      <div class="wrapper">
         <div id="H" class="letter">H</div>
         <div class="shadow">H</div>
       </div>
-        <div class="wrapper">
+      <div class="wrapper">
         <div id="E" class="letter">E</div>
         <div class="shadow">E</div>
       </div>
-        <div class="wrapper">
+      <div class="wrapper">
         <div id="R" class="letter">R</div>
         <div class="shadow">R</div>
       </div>
