--- a/decode/index.html
+++ b/decode/index.html
@@ -2,6 +2,7 @@
   <style>
     body {
       font-family: Roboto, sans-serif;
+      background-color: #b59410;
     }
 
     #formdiv {
@@ -16,6 +17,7 @@
       display: flex;
       justify-content: center;
       padding: 0;
+      background-color: #8acd2c;
     }
 
     #result {
@@ -56,9 +58,15 @@
       margin-left: 1em;
       margin-right: 1em;
     }
+
+    H1 {
+      color: aqua;
+      text-align: center;
+    }
   </style>
 
   <body>
+    <H1>DECODE</H1>
     <div id="formdiv">
       <form id="form">
         <input
@@ -73,8 +81,8 @@
           placeholder="Enter encrypted message"
           autocomplete="off"
         />
-        <p id="result"></p>
       </form>
+      <p id="result"></p>
     </div>
     <script>
       /**
